# OptiBench-AGI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  workflow.py
agents/: __init__.py  coding.py  extraction.py  extraction_critic.py  formalization.py  locator.py  research.py
cli/: __init__.py  commands.py  interactive.py
dataset/: run_summary.json  search_results.json
dataset/1005.2908v3/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/1208.3922v3/: paper.md
dataset/1303.2875v1/: paper.md
dataset/1305.6023v3/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/1406.0899v4/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/1410.8625v3/: paper.md
dataset/1507.07661v2/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/1608.04896v2/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/1805.11687v1/: paper.md
dataset/1808.06100v6/: benchmark.json  outline.json  paper.md  pseudocode.txt  solve.py
dataset/2201.02491v3/: paper.md
dataset/2202.09665v1/: paper.md
dataset/2206.09865v4/: paper.md
dataset/2303.08710v1/: paper.md
dataset/2310.13334v2/: paper.md
dataset/2402.07064v6/: paper.md
dataset/2409.10311v1/: benchmark.json  outline.json  paper.md  pseudocode.txt  (+1 more)
quality/: __init__.py  gate.py
runner/: __init__.py  pipeline_batch.py
schema/: __init__.py  models.py
scripts/: diagnose_arxiv_connection.py  test_api_connection.py
toolkits/: __init__.py  paper_tools.py  pdf_converter.py  validators.py
(+2 files in other folders)
